# claude-task-master

./: README-task-master.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.changeset/: floppy-plants-marry.md  fluffy-cougars-float.md  public-weeks-try.md  rich-carrots-juggle.md  silly-mice-divide.md  twenty-candles-end.md  whole-rooms-nail.md
.github/workflows/: ci.yml
assets/: env.example
docs/: command-reference.md  tutorial.md
python-wrapper/: README.md  pyproject.toml
python-wrapper/taskmaster_ai/: __main__.py
scripts/: init.js
scripts/modules/: ai-services.js  ai-tracker.js  commands.js  config-manager.js  task-manager.js  ui.js  utils.js
scripts/modules/progress/: cliProgressFactory.js  index.js  prdParseTracker.js  progressTrackerBuilder.js
scripts/modules/task-manager/: models.js  task-graph.js
src/utils/: updateGitignore.js
tests/unit/: config-manager.test.js  init.test.js  ui.test.js
